does this pdf work?

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello. It's me.
+<object data="/pdf/sample.pdf" type="application/pdf" width="100%" height="100%">
+<iframe src="/pdf/sample.pdf" width="100%" height="100%" style="border: none;">
+This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample.pdf">Download PDF</a>
+</iframe>
+</object>
