fix resume page

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,33 @@
-<object data="/pdf/CMO Resume.pdf" type="application/pdf" width="100%" height="100%">
-<iframe src="/pdf/CMO Resume.pdf" width="100%" height="100%" style="border: none;">
-This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample.pdf">Download PDF</a>
-</iframe>
-</object>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Claire O'Connor Architecture</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon-precomposed" href="/temp-favicon.png">
+    <link rel="icon" type="image/png" href="temp-favicon.png" />
+
+    <meta property="og:title" content="Claire O'Connor Architecture">
+    <meta property="og:site_name" content="Claire O'Connor Architecture">
+    <meta property="og:url" content="https://claireoconnorarchitecture.github.io">
+    <meta property="og:description" content="Claire O'Connor Architecture">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://claireoconnorarchitecture.github.io">
+    <meta name="twitter:creator" content="Claire O'Connor Architecture">
+    <meta name="twitter:title" content="Claire O'Connor Architecture">
+    <meta name="twitter:description" content="Claire O'Connor Architecture">
+
+    <link href="style/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Satisfy|Lemon" rel="stylesheet">
+</head>
+<body>
+    <object data="/pdf/CMO Resume.pdf" type="application/pdf" width="100%" height="100%">
+        <iframe src="/pdf/CMO Resume.pdf" width="100%" height="100%" style="border: none;">
+        This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample.pdf">Download PDF</a>
+        </iframe>
+    </object>
+</body>
