point to stylesheet

--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Claire O'Connor Architecture">
     <meta name="twitter:description" content="Claire O'Connor Architecture">
 
-    <link href="style/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Satisfy|Lemon" rel="stylesheet">
 </head>
 <body>
