remove stylesheet for now

--- a/worksample.html
+++ b/worksample.html
@@ -20,14 +20,11 @@
     <meta name="twitter:creator" content="Claire O'Connor Architecture">
     <meta name="twitter:title" content="Claire O'Connor Architecture">
     <meta name="twitter:description" content="Claire O'Connor Architecture">
-
-    <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins|Satisfy|Lemon" rel="stylesheet">
 </head>
 <body>
     <object data="/pdf/CMO Work Samples.pdf" type="application/pdf" width="100%" height="100%">
         <iframe src="/pdf/CMO Work Samples.pdf" width="100%" height="100%" style="border: none;">
-        This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample.pdf">Download PDF</a>
+        This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/CMO Work Samples.pdf">Download PDF</a>
         </iframe>
     </object>
 </body>
