--- a/worksample.html
+++ b/worksample.html
@@ -1,5 +1,5 @@
-<object data="/pdf/CMOWorkSamples.pdf" type="application/pdf" width="100%" height="100%">
-    <iframe src="/pdf/CMOWorkSamples.pdf" width="100%" height="100%" style="border: none;">
-    This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/CMOWorkSamples.pdf">Download PDF</a>
+<object data="/pdf/CMO-Work-Samples.pdf" type="application/pdf" width="100%" height="100%">
+    <iframe src="/pdf/CMO-Work-Samples.pdf" width="100%" height="100%" style="border: none;">
+    This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/CMO-Work-Samples.pdf">Download PDF</a>
     </iframe>
 </object>
